src/main/java/com/example/buyer/_core/errors/exception/Exception404.java
package com.example.buyer._core.errors.exception;

public class Exception404 extends RuntimeException{

    public Exception404(String msg) {
        super(msg);
    }
}
